manifests/js-app-deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: db-service
  namespace: js-app
spec:
  selector:
    app: app-and-db
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306

---
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: js-app
spec:
  selector:
    app: app-and-db
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: js-app-deployment
  namespace: js-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-and-db
  template:
    metadata:
      labels:
        app: app-and-db
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: db
        image: varbakys/privaterepository:js-app-database
        imagePullPolicy: Always
        ports:
        - containerPort: 3306
      - name: app
        image: varbakys/privaterepository:js-app-application
        imagePullPolicy: Always
        ports:
        - containerPort: 4000
        volumeMounts:
        - name: app-env
          mountPath: /usr/src/app/.env
          subPath: .env
          readOnly: true
      volumes:
      - name: app-env
        secret:
          secretName: app-env

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: js-app-ingress
  namespace: js-app
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: 'true'
    cert-manager.io/cluster-issuer: letsencrypt-dev
spec:
  rules:
    - host: voco.varvas.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-service
                port:
                  number: 4000
  tls:
    - secretName: web-app-cert
      hosts:
        - voco.varvas.net
